--- a/dev.html
+++ b/dev.html
@@ -69,7 +69,11 @@
 <div class="container">
     <section class="section">
         <h2>About Me</h2>
-        <p>To create and to provide.</p>
+        <p>I'm Ahmed Hamdan, a backend developer passionate about leveraging technology to drive innovation and enhance team performance. With a focus on Node.js and database management, I bring comprehensive experience in fintech software engineering, crafting APIs, microservices, and SDKs for seamless integration.<br>
+
+            My journey has been dynamic, collaborating closely with cross-functional teams to convert business ideas into scalable code. Proficient in Express, PostgreSQL, TypeORM, and MongoDB, I thrive in fast-paced environments, troubleshooting backend and database issues with precision.<br>
+            
+            Beyond technical skills, I excel in communication and teamwork, fostering effective collaborations with stakeholders. Adaptable and eager to learn, I'm poised to further develop expertise in areas like RESTful API design and cloud computing<br></p>
     </section>
 
     <section class="section">
